# uefactory

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml  uef.toml.example
docs/: ARCHITECTURE.md  ASSET_ACQUISITION.md  CONVENTIONS.md  ENVIRONMENT.md  QUESTIONS.md  SIGNALS.md  WORKLOG.md
examples/: m2_assets.yaml  m2_spike_assets.yaml  m2_thumbnail_avocado.yaml  orbit8.yaml  orbit8_beauty.yaml  orbit8_hdri.yaml  orbit8_hdri_all.yaml  orbit8_none.yaml
tests/: test_acquire_blackmyth.py  test_acquire_failure_journal.py  test_acquire_hdri.py  test_acquire_models.py  test_acquire_models_cli.py  test_acquire_polyhaven.py  test_acquire_polyhaven_cli.py  test_acquire_polyhaven_provider.py  test_acquire_polyhaven_resource_sync.py  test_acquire_polyhaven_resources.py  test_acquire_polyhaven_resources_cli.py  test_acquire_polyhaven_transactions.py  test_acquire_resource_validation.py  test_acquire_runtime.py  test_asset_locking.py  test_batch_report.py  test_catalog.py  test_catalog_cli.py  test_catalog_resources.py  test_config.py  test_doctor.py  test_identity.py  test_ingest_cli.py  test_ingest_executor.py  test_ingest_pipeline.py  test_ingest_quality.py  test_ingest_spec.py  test_ingest_staging.py  test_jobspec.py  test_package_evidence.py  test_remote.py  test_render_artifacts.py  test_render_job.py  test_render_job_remote.py  test_render_job_runtime.py  test_render_job_ue.py  test_render_passes.py  test_render_showcase.py  test_scene_cli.py  test_scene_executor.py  (+13 more)
tools/: check.sh  forbid_main_commit.sh  signal.sh  wait_signal.sh
(+105 files in other folders)
