[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uefactory"
version = "0.1.0"
description = "UE data factory CLI for headless Unreal Engine rendering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0,<2.3",
    "OpenEXR>=3.4,<4",
    "pillow>=10.0",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
uef = "uefactory.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not ue and not net'"
markers = [
    "ue: requires Unreal Engine and GPU rendering",
    "net: requires network or remote hosts",
]
